# AIS

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
izzi-core/: CHANGELOG.md  README.md
izzi-core/examples/: agent_with_loaders.rs  agent_with_ollama.rs  anthropic_agent.rs  cohere_connector.rs  extractor.rs  gemini_embeddings.rs  loaders.rs  multi_agent.rs  perplexity_agent.rs  rag.rs  rag_dynamic_tools.rs  vector_search.rs  vector_search_cohere.rs  xai_embeddings.rs
izzi-core/izzi-core-derive/src/: embed.rs
izzi-core/src/: agent.rs  completion.rs  tool.rs
izzi-core/src/loaders/: file.rs
izzi-core/src/pipeline/: agent_ops.rs  mod.rs  op.rs  try_op.rs
izzi-core/src/providers/: cohere.rs  eternalai.rs  perplexity.rs
izzi-core/tests/: embed_macro.rs
izzi-lancedb/: README.md
izzi-lancedb/examples/: vector_search_local_ann.rs  vector_search_s3_ann.rs
izzi-lancedb/examples/fixtures/: lib.rs
izzi-lancedb/src/: lib.rs
izzi-lancedb/tests/: integration_tests.rs
izzi-lancedb/tests/fixtures/: lib.rs
izzi-mongodb/: Cargo.toml
izzi-mongodb/src/: lib.rs
izzi-neo4j/: Cargo.toml  README.md
izzi-neo4j/examples/: vector_search_simple.rs
izzi-neo4j/examples/display/: lib.rs
izzi-neo4j/src/: lib.rs  vector_index.rs
izzi-neo4j/tests/: integration_tests.rs
izzi-qdrant/: CHANGELOG.md  Cargo.toml  LICENSE
izzi-qdrant/src/: lib.rs
izzi-qdrant/tests/: integration_tests.rs
izzi-sqlite/: Cargo.toml
izzi-sqlite/examples/: vector_search_sqlite.rs
izzi-sqlite/tests/: integration_test.rs
izzy-core/: Cargo.toml
izzy-core/examples/: agent.rs  agent_with_context.rs  agent_with_eternalai.rs  agent_with_grok.rs  agent_with_tools.rs  calculator_chatbot.rs  chain.rs  debate.rs  gemini_agent.rs  multi_extract.rs  sentiment_classifier.rs  simple_model.rs
izzy-core/izzy-core-derive/: Cargo.toml
izzy-core/izzy-core-derive/src/: custom.rs
izzy-core/src/: extractor.rs  lib.rs
izzy-lancedb/: CHANGELOG.md  Cargo.toml
izzy-lancedb/examples/: vector_search_local_enn.rs
izzy-lancedb/src/utils/: deserializer.rs  mod.rs
izzy-lancedb/tests/: integration_tests.rs
izzy-mongodb/: CHANGELOG.md  README.md
izzy-mongodb/examples/: vector_search_mongodb.rs
izzy-mongodb/tests/: integration_tests.rs
izzy-neo4j/: CHANGELOG.md
izzy-neo4j/examples/: vector_search_movies_add_embeddings.rs  vector_search_movies_consume.rs
izzy-neo4j/tests/: integration_tests.rs
izzy-qdrant/: README.md
izzy-qdrant/examples/: qdrant_vector_search.rs
izzy-sqlite/: CHANGELOG.md  README.md
izzy-sqlite/src/: lib.rs
(+17 files in other folders)
